# solana-donation-contract

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  API.md  Anchor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_MULTI_LANG.md  Cargo.toml  Dockerfile  FIXES.md  IMPROVEMENTS.md  LICENSE  MULTI_LANG_README.md  Makefile  PERFORMANCE.md  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  package.json  tsconfig.json
.github/workflows/: ci.yml  multi-lang-ci.yml  release.yml  rust-tests.yml
examples/: advanced-usage.ts  client-example.ts  webhook-integration.ts
keypairs/: README.md
languages/cairo/donation-contract/: README.md  Scarb.toml  donation.cairo
languages/clarity/donation-contract/: Clarinet.toml  README.md  donation.clar
languages/cpp/crypto-algorithms/: CMakeLists.txt  README.md  keccak256.cpp
languages/crystal/solana-client/: README.md
languages/elixir/donation-client/: README.md
languages/forth/donation-client/: README.md  donation-client.fs
languages/go-cosmos/donation-module/: README.md  go.mod  keeper.go
languages/go/rpc-tools/: README.md  go.mod  signature_verifier.go
languages/haskell-plutus/donation-contract/: DonationContract.hs  README.md  donation-contract.cabal
languages/haskell/solana-client/: DonationClient.hs  README.md
languages/html-css/dapp-landing/: README.md  index.html  styles.css
languages/ink/donation-contract/: Cargo.toml  README.md  lib.rs
languages/rust-near/donation-contract/: Cargo.toml  README.md
languages/rust-near/donation-contract/src/: lib.rs
programs/donation/: Cargo.toml
scripts/: build-all.sh  deploy-devnet.sh  deploy-mainnet.sh  deploy.sh  initialize.sh  setup.sh  test-all.sh
tests/: benchmark.test.ts  donation.test.ts
types/: index.ts
utils/: config.ts  constants.ts  errors.ts  logger.ts  monitor.ts  validation.ts
(+28 files in other folders)
