[package]
name = "donation-contract"
version = "0.1.0"
edition = "2021"
authors = ["Donation Contract Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.0.0"

[dev-dependencies]
near-sdk = { version = "5.0.0", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
